--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "shopify hydrogen preview"
   },
   "devDependencies": {
+    "@netlify/hydrogen-platform": "^1.0.0",
     "@shopify/cli": "3.0.25",
     "@shopify/cli-hydrogen": "3.0.25",
     "vite": "^2.9.0"
