--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,8 +5,9 @@
     "moduleResolution": "node16",
     "lib": ["dom", "dom.iterable", "scripthost", "es2020"],
     "jsx": "react",
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["**/*.js", "**/*.jsx"]
+  "include": ["src/**/*.js", "src/**/*.jsx"]
 }
