--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,8 +4,9 @@
     "module": "esnext",
     "moduleResolution": "node16",
     "lib": ["dom", "dom.iterable", "scripthost", "es2020"],
-    "jsx": "react-jsx",
-    "types": ["vite/client"]
+    "jsx": "react",
+    "types": ["vite/client"],
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "dist"],
   "include": ["src/**/*.js", "src/**/*.jsx"]
