--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "@shopify/cli": "3.0.25",
     "@shopify/cli-hydrogen": "3.0.25",
     "cross-env": "^7.0.3",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "@types/node": "^17.0.23",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "tsup": "^6.0.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -43,7 +48,8 @@
     "@netlify/vite-plugin-netlify-edge": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "magic-string": "^0.26.1"
   },
   "author": "Diaz"
 }
