--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "esnext",
+    "moduleResolution": "node16",
     "lib": ["dom", "dom.iterable", "scripthost", "es2020"],
-    "jsx": "react",
+    "jsx": "react-jsx",
     "types": ["vite/client"],
-    "outDir": "./dist"
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*.js", "src/**/*.jsx"]
+  "include": ["**/*.js", "**/*.jsx"]
 }
