--- a/package.json
+++ b/package.json
@@ -31,25 +31,27 @@
     "@netlify/hydrogen-platform": "^1.0.0",
     "@shopify/cli": "3.0.25",
     "@shopify/cli-hydrogen": "3.0.25",
-    "cross-env": "^7.0.3",
-    "vite": "^2.9.0",
     "@types/node": "^17.0.23",
+    "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "tsup": "^6.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vite": "^2.9.0"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.18.6",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
-    "@shopify/hydrogen": "^1.0.2",
     "@netlify/vite-plugin-netlify-edge": "^1.1.0",
+    "@shopify/hydrogen": "^1.0.2",
+    "@vitejs/plugin-react": "^1.3.2",
+    "magic-string": "^0.26.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "magic-string": "^0.26.1"
+    "react-router-dom": "^6.3.0"
   },
   "author": "Diaz"
 }
