--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
     "lib": ["dom", "dom.iterable", "scripthost", "es2020"],
     "jsx": "react-jsx",
     "types": ["vite/client"],
+    "outDir": "./dist",
   },
   "exclude": ["node_modules", "dist"],
   "include": ["**/*.js", "**/*.jsx"]
