--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "dev": "shopify hydrogen dev",
     "preview": "shopify hydrogen preview",
-    "build": "npm run build:client && npm run build:ssr",
+    "build": "shopify hydrogen build",
     "build:client": "vite build --outDir dist/client --manifest",
     "build:ssr": "cross-env WORKER=true vite build --ssr @netlify/hydrogen-platform/handler"
   },
