--- a/package.json
+++ b/package.json
@@ -4,28 +4,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
-  "module": "./dist/index.mjs",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    },
-    "./plugin": {
-      "import": "./dist/plugin.mjs",
-      "require": "./dist/plugin.js"
-    },
-    "./handler": "./dist/handler.mjs",
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "dev": "shopify hydrogen dev",
     "preview": "shopify hydrogen preview",
-    "build": "npm run build:client && npm run build:ssr",
-    "build:client": "vite build --outDir dist/client --manifest",
-    "build:ssr": "cross-env WORKER=true vite build --ssr @netlify/hydrogen-platform/handler"
+    "build": "shopify hydrogen build"
   },
   "devDependencies": {
     "@netlify/hydrogen-platform": "^1.0.0",
@@ -40,7 +22,6 @@
     "vite": "^2.9.0"
   },
   "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.18.6",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
