--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2020",
+    "baseUrl": "src",
     "module": "esnext",
     "moduleResolution": "node16",
     "lib": ["dom", "dom.iterable", "scripthost", "es2020"],
     "jsx": "react-jsx",
     "types": ["vite/client"],
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "dist"],
   "include": ["**/*.js", "**/*.jsx"]
