--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "shopify hydrogen dev",
     "preview": "shopify hydrogen preview",
