--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@shopify/cli": "3.0.25",
     "@shopify/cli-hydrogen": "3.0.25",
     "@types/node": "^17.0.23",
-    "cross-env": "^7.0.3",
-    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "tsup": "^6.0.0",
     "typescript": "^4.6.3",
@@ -31,9 +29,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "magic-string": "^0.26.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "vite-plugin-require": "^1.0.1"
+    "react-dom": "^18.2.0"
   },
   "author": "Diaz"
 }
