--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@netlify/hydrogen-platform": "^1.0.0",
     "@shopify/cli": "3.0.25",
     "@shopify/cli-hydrogen": "3.0.25",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^17.0.23",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
+    "tailwindcss": "^3.1.6",
     "tsup": "^6.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.0"
